# Layers

./: .gitattributes  .gitignore  .vercelignore  Dockerfile.worker  MVP_LOCK.md  Makefile  OSS-LICENSING.md  README.md  ZROKY_BUILD_TRACKER.md  ZROKY_FINAL_BUILD_PLAN.md  ZROKY_MVP_EXECUTION_GOAL.md  docker-compose.yml  package-lock.json  package.json  progress.txt
zroky-backend/: .dockerignore  .env.production.example  .env.self-host.example  .gitignore  BRANCH_PROTECTION.md  BUILD_LOG.md  DEPLOYMENT_SECRETS.md  Dockerfile  EXECUTION_TRACKER.md  Procfile  RAILWAY_GO_LIVE_CHECKLIST.md  README.md  alembic.ini  check_db.py  docker-compose.yml  mypy.ini  pricing_config.json  progress.txt  pyproject.toml  pytest.ini  railway.toml  reproduce_test.py  requirements-dev.txt  requirements.txt  source_truth_manifest.json  test_results.txt
zroky-backend/alembic/: env.py
zroky-backend/api-contracts/: pricing-plans.json
zroky-backend/app/: __init__.py  main.py
zroky-backend/benchmarks/: bench_detector_latency.py  bench_gateway_overhead.py  bench_ingest_throughput.py  bench_sdk_overhead.py
zroky-backend/docs/: README.md  architecture.md  deployment.md  sdk.md  security.md
zroky-backend/scripts/: check_schema.py  configure-branch-protection.ps1  create_diagnosis_ui_state_table.py  db_inspect.py  discovery_harness.py  export_discovery_traces.py  export_openapi.py  generate-api-contract.ps1  generate_discovery_mixed_dataset.py  mcp_interception_smoke.py  railway_smoke_check.py  rollback_drill_verify.py  run_discovery_precision_gate.py  run_postgres_rls_suite.py  seed_discovery_dogfood_calls.py  seed_mvp_money_path_demo.py  show_feature_votes.py  start-api.sh  start-beat.sh  start-worker.sh  start.sh  validate_discovery_trace_readiness.py  verify-branch-protection.ps1
zroky-backend/tests/: conftest.py  test_ablation.py  test_action_intents.py  test_actions_lifecycle_summary.py  test_agent_profiles_routes.py  test_agent_reliability.py  test_ai_integration.py  test_anomalies.py  test_approval_adaptations.py  test_ask.py  test_auth.py  test_backend_production_deploy_workflow.py  test_billing_migration_0088.py  test_billing_v2.py  test_body_size_limit.py  test_cache_service.py  test_capture_health.py  test_clickhouse_sync.py  test_connector_credential_custody.py  test_connector_credential_migration.py  test_connector_manifest.py  test_connector_manifest_keyless_proof.py  test_connector_manifest_presets.py  test_contracts_routes.py  test_correlation_id.py  test_cost_trust.py  test_currency_exchange.py  test_dashboard_phase0.py  test_database_url.py  test_demo_money_path_seed.py  test_deployment_smoke_contract.py  test_design_partner_install_kit.py  test_design_partner_owner_proof_artifact.py  test_diagnosis.py  test_diagnosis_engine.py  test_digest.py  test_digest_engine.py  test_discovery.py  test_discovery_harness_gate.py  test_discovery_migration.py  (+125 more)
zroky-replay-worker/: .env.example  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
zroky-replay-worker/app/: __init__.py  artifacts.py  config.py  main.py  models.py  poller.py  runner.py
zroky-replay-worker/examples/: sample_replay_job.json
zroky-replay-worker/tests/: test_runner.py
zroky-sdk/: .gitignore  README.md  pyproject.toml  test_quick.py
zroky-sdk/examples/: CUSTOMER_HOSTED_RUNNER.md  CUSTOMER_HOSTED_RUNNER.txt  Dockerfile.runner  customer_hosted_runner.py  docker-compose.runner.yml  env.runner.example  failure_to_golden.md  sample_trace.json
zroky-sdk/tests/: __init__.py  conftest.py  test_async_queue.py  test_budget.py  test_cache.py  test_call_integration.py  test_circuit_breaker.py  test_cli.py  test_cost.py  test_fallback.py  test_final_pre_execution_guard.py  test_final_sdk_public_surface.py  test_final_sdk_shape.py  test_integrations_optional.py  test_local_mode.py  test_loop_guard.py  test_metrics.py  test_offline_buffer.py  test_pii.py  test_prompt_fingerprint.py  test_queue.py  test_rate_limiter.py  test_retry.py  test_runner.py  test_sdk.py  test_timeout_manager.py  test_validation.py
zroky-sdk/zroky/: __init__.py  _async.py  _async_streaming.py  _call.py  _capture.py  _errors.py  _globals.py  _outcome.py  _protect.py  _runner.py  _streaming.py  (+13 more)
(+1515 files in other folders)
