[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "zroky-replay-worker"
version = "0.1.0"
requires-python = ">=3.11"
license = { text = "FSL-1.1-MIT" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
