[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zroky"
version = "0.1.0"
description = "ZROKY Python SDK — production AI diagnosis and observability"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "observability", "diagnosis", "openai", "anthropic"]
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
zroky = "zroky.cli:main"

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
opentelemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "opentelemetry-api>=1.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["zroky"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
